Sir Changes are done

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -21,6 +21,7 @@
     "brandingManagement": "Branding Management",
     "cleaningScheduler": "Cleaning Scheduler",
     "comprehensiveReporting": "Comprehensive Reports",
+    "comprehensiveDetails": "Comprehensive Train Details",
     "passengerInfo": "Passenger Information",
     "ticketingRevenue": "Ticketing & Revenue",
     "incidentResponse": "Incident & Emergency"
