NBN Last Chages

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -16,7 +16,8 @@
     "fleetOverview": "Fleet Overview",
     "inductionPlanning": "Induction Planning",
     "whatIfSimulation": "What-If Simulation",
-    "maintenanceTracking": "Maintenance Tracking", 
+    "maintenanceTracking": "Maintenance Tracking",
+    "maintenanceLog": "Maintenance Log", 
     "certificateManagement": "Certificate Management",
     "brandingManagement": "Branding Management",
     "cleaningScheduler": "Cleaning Scheduler",
@@ -58,6 +59,7 @@
     "aiScheduling": "AI-Powered Scheduling",
     "ortoolsScheduling": "Google OR-Tools Scheduling",
     "sihScheduling": "SIH-Compliant Scheduling",
+    "deepRLTest": "Deep RL Scheduler",
     "trainScheduling": "Train Scheduling (OR-Tools)",
     "scheduleOptimization": "Schedule Optimization",
     "recommendedSchedule": "Recommended Schedule",
